# poly

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  benchmark.cpp  poly.hpp  poly_dev.cpp  poly_dev.t.cpp  poly_v5.hpp  poly_v7.hpp  sample.cpp
benchmarks/: CMakeLists.txt
benchmarks/include/: polyclasses.hpp  vtclasses.hpp
benchmarks/src/: benchmarks.cpp
poly/: CMakeLists.txt
poly/include/: dispatcher.hpp  explicit copy.hpp  explicit.hpp  group.hpp  implicit copy.hpp  implicit.hpp  poly.hpp  polysa.hpp
poly/include/poly/: dispatcher.hpp  poly.hpp  polysa.hpp
samples/: CMakeLists.txt  sample.cpp
samples/src/: sample.cpp
security/: CMakeLists.txt
security/src/: security.cpp
tests/: CMakeLists.txt
tests/src/: classes.cpp  flat.cpp  tests.cpp
